syntax = "proto3";

import "brewblox.proto";
import "nanopb.proto";

package blox;

message SetpointProfile {
    option (nanopb_msgopt).msgid = 311;

    message Point {
        uint32 time = 1;
        sint32 temperature = 2 [(brewblox).unit = Temp, (brewblox).scale = 4096, (nanopb).int_size = IS_32];
    }

    repeated Point points = 1;
}
