syntax = "proto3";

import "brewblox.proto";
import "nanopb.proto";

package blox;

message Ticks {
    option (nanopb_msgopt).msgid = 257;

    uint32 millisSinceBoot = 1 [(brewblox).readonly = true, (nanopb).int_size = IS_32];
    uint32 secondsSinceEpoch = 2 [(nanopb).int_size = IS_32];
}
